# telegram-ai-assistant

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  loader.py  main.py  pulling.py  pyproject.toml
config/: __init__.py  base.py  constants.py
crud/: questions.py  type_questions.py
db/: database.py  models.py
handlers/: answering_questions.py  callbacks_handlers.py  common.py  follow_up.py  quiz_start.py  working_questions.py
keyboards/: inline.py  reply.py
migrations/: env.py
migrations/versions/: 2639cb5f74a4_.py  e9057c241482_.py
prompts/: template_prompts.py
schemas/: questions.py  response.py  type_questions.py
services/: __init__.py  deepgram.py  gpt_oss.py  lang_gpt_oss.py  utils.py
states/: quiz_states.py
