[project]
name = "tg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "aiogram>=3.22.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "deepgram-sdk>=5.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "gunicorn>=25.1.0",
    "langchain-openai>=1.1.11",
    "openai>=2.15.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "ruff>=0.14.14",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
